Rename scripts & fix web bundling

--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"eslint": "eslint app",
+		"lint": "yarn run eslint",
 		"test": "jest",
-		"ios-dev": "react-native run-ios",
-		"ios-bundle": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
-		"ios-dev-bundle": "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
-		"android-dev": "react-native run-android",
-		"android-bundle": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
-		"android-dev-bundle": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
-		"web-dev": "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
-		"web-bundle": "webpack --config web/webpack/web.prod.config.js --progress --colors"
+		"start": "yarn run start:web",
+		"start:rn": "node node_modules/react-native/local-cli/cli.js start",
+		"start:android": "react-native run-android",
+		"start:ios": "react-native run-ios",
+		"start:web": "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
+		"bundle:ios": "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
+		"bundle:ios:dev": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
+		"bundle:android": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
+		"bundle:android:dev": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
+		"bundle:web": "webpack --config web/webpack/web.prod.config.js --progress --colors",
+		"deploy:web": "yarn run bundle:web&&gh-pages -d public"
 	},
 	"dependencies": {
 		"react": "^15.4.1",
