--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"bundle:android": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
 		"bundle:android:dev": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
 		"bundle:web": "webpack --config web/webpack/web.prod.config.js --progress --colors",
-		"deploy:web": "yarn run bundle:web&&gh-pages -d public"
+		"deploy:web": "yarn run bundle:web&&gh-pages -d web/public"
 	},
 	"dependencies": {
 		"react": "^15.4.1",
