More framework updates
- Add CSS Modules
- Add scss-lint
- Add Flow
- Pull out base webpack.config.js

--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"eslint": "eslint app",
 		"flow": "flow",
-		"check": "yarn run eslint && yarn run flow",
+		"lint": "yarn run lint:js && yarn run lint:css",
+		"lint:js": "eslint app",
+		"lint:css": "scss-lint app",
+		"check:static": "yarn run lint && yarn run flow",
 		"test": "jest --verbose",
 		"test:coverage": "yarn test -- --coverage",
+		"validate": "yarn run check:static && yarn test",
 		"start": "yarn run start:web",
 		"start:rn": "node node_modules/react-native/local-cli/cli.js start",
 		"start:android": "react-native run-android",
 		"start:ios": "react-native run-ios",
 		"start:web": "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
-		"validate": "yarn run check && yarn test",
 		"bundle:ios": "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
 		"bundle:ios:dev": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
 		"bundle:android": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
@@ -25,6 +27,7 @@
 		"gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
 	},
 	"dependencies": {
+		"babel-plugin-react-css-modules": "^1.1.0",
 		"humps": "^2.0.0",
 		"isomorphic-fetch": "^2.2.1",
 		"lodash": "^4.17.3",
@@ -40,6 +43,7 @@
 	},
 	"devDependencies": {
 		"babel-cli": "^6.18.0",
+		"babel-core": "^6.20.0",
 		"babel-eslint": "^7.1.1",
 		"babel-jest": "17.0.2",
 		"babel-loader": "^6.2.9",
@@ -63,6 +67,7 @@
 		"react-test-renderer": "15.4.1",
 		"redux-devtools-extension": "^1.0.0",
 		"redux-logger": "^2.7.4",
+		"resolve-url-loader": "^1.6.1",
 		"sass-loader": "^4.0.2",
 		"style-loader": "^0.13.1",
 		"webpack": "^1.14.0",
