--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,11 @@
     ],
     "plugins": [
         "transform-class-properties",
-        "transform-flow-strip-types"
+        "transform-flow-strip-types",
+        [
+            "react-css-modules", {
+                "generateScopedName": "[name]__[local]___[hash:base64:5]"
+            }
+        ]
     ]
 }
