--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"flow": "flow",
 		"lint": "yarn run lint:js && yarn run lint:css",
 		"lint:js": "eslint app",
-		"lint:css": "scss-lint app",
+		"lint:css": "sass-lint --verbose --no-exit",
 		"check:static": "yarn run lint && yarn run flow",
 		"test": "jest --verbose",
 		"test:coverage": "yarn test -- --coverage",
@@ -68,6 +68,7 @@
 		"redux-devtools-extension": "^1.0.0",
 		"redux-logger": "^2.7.4",
 		"resolve-url-loader": "^1.6.1",
+		"sass-lint": "^1.10.2",
 		"sass-loader": "^4.0.2",
 		"style-loader": "^0.13.1",
 		"webpack": "^1.14.0",
