--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,7 @@
         "react",
         ["env", {
             "targets": {
-                "browsers": ["last 2 versions", "safari >= 7"]
+                "browsers": ["last 2 versions"]
             }
         }]
     ],
