--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"xml2js": "^0.4.17"
 	},
 	"devDependencies": {
+		"autoprefixer": "^6.5.4",
 		"babel-cli": "^6.18.0",
 		"babel-core": "^6.20.0",
 		"babel-eslint": "^7.1.1",
@@ -53,6 +54,7 @@
 		"babel-preset-react": "^6.16.0",
 		"babel-preset-react-native": "1.9.0",
 		"css-loader": "^0.26.1",
+		"enzyme": "^2.6.0",
 		"eslint": "^3.12.1",
 		"eslint-config-eventbrite-react": "^2.0.1",
 		"eslint-plugin-import": "^2.2.0",
@@ -63,6 +65,7 @@
 		"jest": "17.0.3",
 		"json-loader": "^0.5.4",
 		"node-sass": "^4.0.0",
+		"postcss-loader": "^1.2.1",
 		"react-hot-loader": "^1.3.1",
 		"react-test-renderer": "15.4.1",
 		"redux-devtools-extension": "^1.0.0",
