Set up redux & react-router (web-only)
Also:

- Add transform-class-properties plugin

--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,6 @@
                 "browsers": ["last 2 versions", "safari >= 7"]
             }
         }]
-    ]
+    ],
+    "plugins": ["transform-class-properties"]
 }
