--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
 	"dependencies": {
 		"react": "^15.4.1",
 		"react-dom": "^15.4.1",
-		"react-native": "0.39.2"
+		"react-native": "0.39.2",
+		"react-redux": "^5.0.1",
+		"react-router": "^3.0.0",
+		"redux": "^3.6.0",
+		"redux-thunk": "^2.1.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^7.1.1",
 		"babel-jest": "17.0.2",
 		"babel-loader": "^6.2.9",
+		"babel-plugin-transform-class-properties": "^6.19.0",
 		"babel-preset-env": "^1.0.2",
 		"babel-preset-react": "^6.16.0",
 		"babel-preset-react-native": "1.9.0",
@@ -41,6 +46,8 @@
 		"node-sass": "^4.0.0",
 		"react-hot-loader": "^1.3.1",
 		"react-test-renderer": "15.4.1",
+		"redux-devtools-extension": "^1.0.0",
+		"redux-logger": "^2.7.4",
 		"sass-loader": "^4.0.2",
 		"style-loader": "^0.13.1",
 		"webpack": "^1.14.0",
