--- a/package.json
+++ b/package.json
@@ -19,15 +19,20 @@
 		"deploy:web": "yarn run bundle:web&&gh-pages -d web/public"
 	},
 	"dependencies": {
+		"isomorphic-fetch": "^2.2.1",
+		"lodash": "^4.17.2",
 		"react": "^15.4.1",
 		"react-dom": "^15.4.1",
 		"react-native": "0.39.2",
 		"react-redux": "^5.0.1",
 		"react-router": "^3.0.0",
 		"redux": "^3.6.0",
-		"redux-thunk": "^2.1.0"
+		"redux-thunk": "^2.1.0",
+		"url-lib": "^2.0.2",
+		"xml2js": "^0.4.17"
 	},
 	"devDependencies": {
+		"babel-cli": "^6.18.0",
 		"babel-eslint": "^7.1.1",
 		"babel-jest": "17.0.2",
 		"babel-loader": "^6.2.9",
@@ -43,6 +48,7 @@
 		"eslint-plugin-react": "^6.8.0",
 		"gh-pages": "^0.12.0",
 		"jest": "17.0.3",
+		"json-loader": "^0.5.4",
 		"node-sass": "^4.0.0",
 		"react-hot-loader": "^1.3.1",
 		"react-test-renderer": "15.4.1",
