--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,8 @@
             }
         }]
     ],
-    "plugins": ["transform-class-properties"]
+    "plugins": [
+        "transform-class-properties",
+        "transform-flow-strip-types"
+    ]
 }
