--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
 	"private": true,
 	"scripts": {
 		"eslint": "eslint app",
-		"lint": "yarn run eslint",
+		"flow": "flow",
+		"check": "yarn run eslint && yarn run flow",
 		"test": "jest",
 		"start": "yarn run start:web",
 		"start:rn": "node node_modules/react-native/local-cli/cli.js start",
 		"start:android": "react-native run-android",
 		"start:ios": "react-native run-ios",
 		"start:web": "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
+		"validate": "yarn run check && yarn test",
 		"bundle:ios": "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
 		"bundle:ios:dev": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
 		"bundle:android": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
 		"bundle:android:dev": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
 		"bundle:web": "webpack --config web/webpack/web.prod.config.js --progress --colors",
-		"deploy:web": "yarn run bundle:web&&gh-pages -d web/public"
+		"deploy:web": "yarn run bundle:web&&gh-pages -d web/public",
+		"gen:routes": "babel-node _scripts/gen-routes-data.js",
+		"gen:stations": "babel-node _scripts/gen-stations-data.js",
+		"gen:mock:edt": "babel-node _scripts/gen-mock-edt-data.js"
 	},
 	"dependencies": {
 		"humps": "^2.0.0",
@@ -38,6 +43,7 @@
 		"babel-jest": "17.0.2",
 		"babel-loader": "^6.2.9",
 		"babel-plugin-transform-class-properties": "^6.19.0",
+		"babel-plugin-transform-flow-strip-types": "^6.21.0",
 		"babel-preset-env": "^1.0.2",
 		"babel-preset-react": "^6.16.0",
 		"babel-preset-react-native": "1.9.0",
@@ -47,6 +53,7 @@
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^3.0.1",
 		"eslint-plugin-react": "^6.8.0",
+		"flow-bin": "^0.37.4",
 		"gh-pages": "^0.12.0",
 		"jest": "17.0.3",
 		"json-loader": "^0.5.4",
