More cleaning of XML 2 JS
- parseNumbers in XML
- camelize when parsing XML
- output full path of generated JSON files

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -2,5 +2,8 @@
     "extends": "eventbrite-react",
     "rules": {
         "semi": ["error", "never"]
+    },
+    "globals": {
+        "jest": true
     }
 }
