Adding a bunch more test examples (expectations still TBD)

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 		"eslint": "eslint app",
 		"flow": "flow",
 		"check": "yarn run eslint && yarn run flow",
-		"test": "jest",
-		"test:coverage": "jest --coverage true",
+		"test": "jest --verbose",
+		"test:coverage": "yarn test -- --coverage true",
 		"start": "yarn run start:web",
 		"start:rn": "node node_modules/react-native/local-cli/cli.js start",
 		"start:android": "react-native run-android",
