--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 		"babel-cli": "^6.18.0",
 		"babel-core": "^6.20.0",
 		"babel-eslint": "^7.1.1",
-		"babel-jest": "17.0.2",
+		"babel-jest": "^18.0.0",
 		"babel-loader": "^6.2.9",
 		"babel-plugin-transform-class-properties": "^6.19.0",
 		"babel-plugin-transform-flow-strip-types": "^6.21.0",
