--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"json-loader": "^0.5.4",
 		"node-sass": "^4.0.0",
 		"postcss-loader": "^1.2.1",
+		"pre-commit": "^1.2.2",
 		"react-hot-loader": "^1.3.1",
 		"react-test-renderer": "15.4.1",
 		"redux-devtools-extension": "^1.0.0",
@@ -79,5 +80,11 @@
 	},
 	"jest": {
 		"preset": "react-native"
-	}
+	},
+	"engines": {
+		"node": ">=6"
+	},
+    "pre-commit": [
+      "validate"
+    ]
 }
