Clean up some poor test coverage
Also add in Node 7 to Travis CI

--- a/package.json
+++ b/package.json
@@ -82,7 +82,11 @@
 		"webpack-dev-server": "^1.16.2"
 	},
 	"jest": {
-		"preset": "react-native"
+		"preset": "react-native",
+		"coveragePathIgnorePatterns": [
+			"/node-modules/",
+			"<rootDir>/app/store/"
+		]
 	},
 	"engines": {
 		"node": ">=6"
