Add gh-pages deploy to Travis CI
- Fix production webpack bundling (dangling `remove-flow-types-loader`)
- Add message to manual gh-pages deploy
- More README info!

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,23 @@ node_js:
   - "6"
   - "5"
 
-# cache dependencies in $HOME/.yarn-cache across builds
+# Cache dependencies in $HOME/.yarn-cache across builds
 cache: yarn
 
 # Run the the validate script
-script: "yarn run validate:coverage"
+script: yarn run validate:coverage
 
 # Send coverage data to Coveralls
-after_script: "yarn run coveralls"
+after_success: yarn run coveralls
+
+# Build dist files
+before_deploy: yarn run bundle:web
+
+# Deploy to gh-pages branch on Github
+deploy:
+  skip_cleanup: true
+  provider: script
+  script:  ./_scripts/travis-deploy.sh
+  on:
+    branch: master
+    node: "6"
