Fix various issues with web pack configuration
- Specify `NODE_ENV=production` when creating production bundle
- Provide full source maps in production
- Use `/bart-salmon/` base path for production
- Include `eslint-import-resolver-webpack` configuration to .eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,5 +5,12 @@
     },
     "globals": {
         "jest": true
+    },
+    "settings": {
+        "import/resolver": {
+            "webpack": {
+                "config": "web/webpack/web.dev.config.js"
+            }
+        }
     }
 }
