--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "jest --verbose",
 		"test:coverage": "yarn test -- --coverage",
 		"validate": "yarn run check:static && yarn test",
-	    "validate:coverage": "yarn run check:static && yarn test:coverage",
+		"validate:coverage": "yarn run check:static && yarn test:coverage",
 		"coveralls": "cat ./coverage/lcov.info | coveralls",
 		"start": "yarn run start:web",
 		"start:rn": "node node_modules/react-native/local-cli/cli.js start",
@@ -22,7 +22,7 @@
 		"bundle:ios:dev": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
 		"bundle:android": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
 		"bundle:android:dev": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
-		"bundle:web": "webpack --config web/webpack/web.prod.config.js --progress --colors",
+		"bundle:web": "NODE_ENV=production webpack --config web/webpack/web.prod.config.js --progress --colors",
 		"deploy:web": "yarn run bundle:web && gh-pages --dist web/public --message 'Manual deploy'",
 		"gen:routes": "babel-node _scripts/gen-routes-data.js",
 		"gen:stations": "babel-node _scripts/gen-stations-data.js",
@@ -60,6 +60,7 @@
 		"enzyme": "^2.6.0",
 		"eslint": "^3.12.1",
 		"eslint-config-eventbrite-react": "^2.0.1",
+		"eslint-import-resolver-webpack": "^0.8.0",
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^3.0.1",
 		"eslint-plugin-react": "^6.8.0",
