--- a/.flowconfig
+++ b/.flowconfig
@@ -17,17 +17,21 @@
 <PROJECT_ROOT>/node_modules/react-native/packager/react-packager/
 <PROJECT_ROOT>/node_modules/react-native/local-cli/
 <PROJECT_ROOT>/node_modules/react-native/Libraries/
+<PROJECT_ROOT>/node_modules/react-native/lib/
 
 [include]
 
 [libs]
 node_modules/react-native/Libraries/react-native/react-native-interface.js
 node_modules/react-native/flow
-flow/
+flow-typed/npm
 
 [options]
 module.system=haste
 
+module.file_ext=.js
+module.file_ext=.jsx
+module.file_ext=.json
 module.file_ext=.scss
 
 experimental.strict_type_args=true
