--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "extends": "eventbrite-react",
     "rules": {
-        "semi": ["error", "never"]
+        "semi": ["error", "never"],
+        "import/named": "off"
     },
     "globals": {
         "jest": true
