--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
 		"flow-bin": "^0.37.4",
 		"gh-pages": "^0.12.0",
 		"isomorphic-fetch": "^2.2.1",
-		"jest": "17.0.3",
+		"jest": "^18.1.0",
 		"json-loader": "^0.5.4",
 		"node-sass": "^4.0.0",
 		"postcss-loader": "^1.2.1",
