Moving files around to make React Native work
- Making .babelrc only mention `babel-plugin-react-native`
- Moving web-related babel configurations to .babelrc.web.json
- Moving default number of salmon routes constant into a constants file
- Add Bugsnag to option for JavaScript error logging

--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,3 @@
 {
-    "presets": [
-        "react-native",
-        "react",
-        ["env", {
-            "targets": {
-                "browsers": ["last 2 versions"]
-            }
-        }]
-    ],
-    "plugins": [
-        "transform-class-properties",
-        "transform-flow-strip-types",
-        [
-            "react-css-modules", {
-                "generateScopedName": "[name]__[local]___[hash:base64:5]"
-            }
-        ]
-    ]
+    "presets": ["react-native"]
 }
