--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"babel-loader": "^6.2.9",
 		"babel-plugin-transform-class-properties": "^6.19.0",
 		"babel-plugin-transform-flow-strip-types": "^6.21.0",
+		"babel-plugin-transform-runtime": "^6.15.0",
 		"babel-preset-env": "^1.0.2",
 		"babel-preset-react": "^6.16.0",
 		"babel-preset-react-native": "1.9.0",
