Get to a place where web & native render the same app
- Upgrade to react-native 0.40
- Turn of flow (too many errors)
- Streamline index entry points (move routing to App component)
- Add react-native-router-flux for RN routing
- Add react-native-web for (hopefully) shared components
- Remove _normalize.scss since react-native-web provides it for us

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,17 @@
 {
     "extends": "eventbrite-react",
-    "rules": {
-        "semi": ["error", "never"],
-        "import/named": "off"
-    },
-    "globals": {
-        "jest": true
-    },
     "settings": {
         "import/resolver": {
             "webpack": {
                 "config": "web/webpack/web.dev.config.js"
             }
         }
+    },
+    "globals": {
+        "jest": true
+    },
+    "rules": {
+        "import/named": "off",
+        "semi": ["error", "never"]
     }
 }
