--- a/.flowconfig
+++ b/.flowconfig
@@ -2,6 +2,12 @@
 # We fork some components by platform
 .*/*[.]android.js
 
+# Ignore templates for 'react-native init'
+.*/local-cli/templates/.*
+
+# Ignore the website subdir
+<PROJECT_ROOT>/website/.*
+
 # Ignore "BUCK" generated dirs
 <PROJECT_ROOT>/\.buckd/
 
@@ -18,6 +24,8 @@
 <PROJECT_ROOT>/node_modules/react-native/local-cli/
 <PROJECT_ROOT>/node_modules/react-native/Libraries/
 <PROJECT_ROOT>/node_modules/react-native/lib/
+<PROJECT_ROOT>/node_modules/react-native-experimental-navigation/
+<PROJECT_ROOT>/node_modules/animated/
 
 [include]
 
@@ -38,13 +46,14 @@ experimental.strict_type_args=true
 
 munge_underscores=true
 
-module.name_mapper='^image![a-zA-Z0-9$_-]+$' -> 'GlobalImageStub'
 module.name_mapper='^[./a-zA-Z0-9$_-]+\.\(bmp\|gif\|jpg\|jpeg\|png\|psd\|svg\|webp\|m4v\|mov\|mp4\|mpeg\|mpg\|webm\|aac\|aiff\|caf\|m4a\|mp3\|wav\|html\|pdf\)$' -> 'RelativeImageStub'
 
 suppress_type=$FlowIssue
 suppress_type=$FlowFixMe
 suppress_type=$FixMe
 
+suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe\\($\\|[^(]\\|(\\(>=0\\.\\(3[0-6]\\|[1-2][0-9]\\|[0-9]\\).[0-9]\\)? *\\(site=[a-z,_]*react_native[a-z,_]*\\)?)\\)
+suppress_comment=\\(.\\|\n\\)*\\$FlowIssue\\((\\(>=0\\.\\(3[0-6]\\|1[0-9]\\|[1-2][0-9]\\).[0-9]\\)? *\\(site=[a-z,_]*react_native[a-z,_]*\\)?)\\)?:? #[0-9]+
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 suppress_comment=\\(.\\|\n\\)*\\$FlowIgnoreTest
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe
@@ -52,4 +61,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe
 unsafe.enable_getters_and_setters=true
 
 [version]
-^0.37.0
+^0.36.0
