--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
 		"lint": "yarn run lint:js && yarn run lint:css",
 		"lint:js": "eslint app",
 		"lint:css": "sass-lint --verbose --no-exit",
-		"check:static": "yarn run lint && yarn run flow",
+		"check:static": "yarn run lint",
 		"test": "jest --verbose",
 		"test:coverage": "yarn test -- --coverage",
 		"validate": "yarn run check:static && yarn test",
 		"validate:coverage": "yarn run check:static && yarn test:coverage",
 		"coveralls": "cat ./coverage/lcov.info | coveralls",
 		"start": "yarn run start:web",
-		"start:rn": "node node_modules/react-native/local-cli/cli.js start",
+		"start:rn": "react-native start",
 		"start:android": "react-native run-android",
 		"start:ios": "react-native run-ios",
 		"start:web": "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
@@ -35,7 +35,9 @@
 		"lodash": "^4.17.3",
 		"react": "^15.4.1",
 		"react-dom": "^15.4.1",
-		"react-native": "0.39.2",
+		"react-native": "0.40.0",
+		"react-native-router-flux": "^3.37.0",
+		"react-native-web": "^0.0.66",
 		"react-redux": "^5.0.1",
 		"react-router": "^3.0.0",
 		"redux": "^3.6.0",
@@ -65,7 +67,8 @@
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^3.0.1",
 		"eslint-plugin-react": "^6.8.0",
-		"flow-bin": "^0.37.4",
+		"file-loader": "^0.9.0",
+		"flow-bin": "^0.36.0",
 		"gh-pages": "^0.12.0",
 		"isomorphic-fetch": "^2.2.1",
 		"jest": "^18.1.0",
@@ -81,6 +84,7 @@
 		"sass-lint": "^1.10.2",
 		"sass-loader": "^4.0.2",
 		"style-loader": "^0.13.1",
+		"url-loader": "^0.5.7",
 		"webpack": "^1.14.0",
 		"webpack-dev-server": "^1.16.2"
 	},
