Add Salmon Routes page
- Menu links on home page
- Switch to bound arrow functions
- Turn off `no-invalid-this`

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     },
     "rules": {
         "import/named": "off",
+        "no-invalid-this": "off",
         "semi": ["error", "never"]
     }
 }
