Keep origin & destination selections across app loads
- Add `redux-persist` to the store with auto-rehydrate on load
- In order for the Routes page to not doubly request salmon info we need the origin/destination to be null when the page first loads
- When `redux-persist` rehydrates, it'll set the origin/destination which will trigger a salmon info load
- As a result `getSalmonInfo` action needs to check for valid origin/destination
- Rename `isFetchingSalmonRoutes` to just `isFetching` now that app is only dealing w/ salmon routes
- Home page gets rid of labels and just shows selectors with default ORIGIN/DESTINATION options
- Routes page doesn't render if salmonRoutes or arrivals are empty
- Fix nagging issue where `minutes` property of trains was a string not an int
- Strip out remaining CSS modules stuff

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
 		"gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
 	},
 	"dependencies": {
-		"babel-plugin-react-css-modules": "^1.1.0",
 		"humps": "^2.0.0",
 		"lodash": "^4.17.3",
 		"react": "^15.4.1",
@@ -41,6 +40,7 @@
 		"react-redux": "^5.0.1",
 		"react-router": "^3.0.0",
 		"redux": "^3.6.0",
+		"redux-persist": "^4.0.1",
 		"redux-thunk": "^2.1.0",
 		"url-lib": "^2.0.2",
 		"xml2js": "^0.4.17"
