--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"xml2js": "^0.4.17"
 	},
 	"devDependencies": {
+		"airbnb-js-shims": "^1.1.1",
 		"autoprefixer": "^6.5.4",
 		"babel-cli": "^6.18.0",
 		"babel-core": "^6.20.0",
