--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
 		"style-loader": "^0.13.1",
 		"url-loader": "^0.5.7",
 		"webpack": "^1.14.0",
-		"webpack-dev-server": "^1.16.2"
+		"webpack-dev-server": "^1.16.2",
+		"whatwg-fetch": "^2.0.3"
 	},
 	"jest": {
 		"preset": "react-native",
