--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "BartSalmon",
-  "version": "0.0.1",
+  "name": "bart-salmon",
+  "version": "0.1.0",
   "private": true,
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
     "flow": "flow",
     "lint": "yarn run lint:js && yarn run lint:css",
@@ -17,26 +18,42 @@
     "start:rn": "react-native start",
     "start:android": "react-native run-android",
     "start:ios": "react-native run-ios",
-    "start:web": "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
-    "bundle:ios": "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
-    "bundle:ios:dev": "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
-    "bundle:android": "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
-    "bundle:android:dev": "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
-    "bundle:web": "NODE_ENV=production webpack --config web/webpack/web.prod.config.js --progress --colors",
-    "deploy:web": "yarn run bundle:web && gh-pages --dist web/public --message 'Manual deploy'",
+    "start:web":
+      "webpack-dev-server --config web/webpack/web.dev.config.js --inline --hot --colors",
+    "bundle:ios":
+      "react-native bundle --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
+    "bundle:ios:dev":
+      "react-native bundle --dev false --entry-file index.ios.js --platform ios --bundle-output ios/main.jsbundle",
+    "bundle:android":
+      "react-native bundle --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
+    "bundle:android:dev":
+      "react-native bundle --dev false --entry-file index.android.js --platform android --bundle-output android/app/src/main/assets/index.android.bundle",
+    "bundle:web":
+      "NODE_ENV=production webpack --config web/webpack/web.prod.config.js --progress --colors",
+    "deploy:web":
+      "yarn run bundle:web && gh-pages --dist web/public --message 'Manual deploy'",
     "gen:routes": "babel-node _scripts/gen-routes-data.js",
     "gen:stations": "babel-node _scripts/gen-stations-data.js",
     "gen:station-routes": "babel-node _scripts/gen-station-routes-data.js",
     "gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "coveragePathIgnorePatterns": ["/node-modules/", "<rootDir>/app/store/"]
+  },
+  "engines": {
+    "node": ">=6"
+  },
+  "pre-commit": ["validate"],
   "dependencies": {
+    "expo": "^20.0.0",
     "humps": "^2.0.0",
     "lodash": "^4.17.3",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-native": "0.40.0",
+    "react": "^16.0.0-rc.2",
+    "react-dom": "^16.0.0-rc.2",
+    "react-native": "^0.47.0",
     "react-native-router-flux": "^3.37.0",
-    "react-native-web": "^0.0.66",
+    "react-native-web": "^0.0.121",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
@@ -73,11 +90,14 @@
     "gh-pages": "^0.12.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^18.1.0",
+    "jest-expo": "~20.0.0",
     "json-loader": "^0.5.4",
     "postcss-loader": "^1.2.1",
     "pre-commit": "^1.2.2",
     "react-hot-loader": "^1.3.1",
-    "react-test-renderer": "15.4.1",
+    "react-native-scripts": "1.3.1",
+    "react-scripts": "^1.0.13",
+    "react-test-renderer": "^16.0.0-rc.2",
     "redux-devtools-extension": "^1.0.0",
     "redux-logger": "^2.7.4",
     "resolve-url-loader": "^1.6.1",
@@ -87,18 +107,5 @@
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "whatwg-fetch": "^2.0.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "coveragePathIgnorePatterns": [
-      "/node-modules/",
-      "<rootDir>/app/store/"
-    ]
-  },
-  "engines": {
-    "node": ">=6"
-  },
-  "pre-commit": [
-    "validate"
-  ]
+  }
 }
