--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "homepage": "/bart-salmon",
   "scripts": {
     "flow": "flow",
     "lint": "yarn run lint:js && yarn run lint:css",
@@ -39,12 +40,23 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "coveragePathIgnorePatterns": ["/node-modules/", "<rootDir>/app/store/"]
+    "coveragePathIgnorePatterns": ["/node-modules/", "<rootDir>/src/store/"]
+  },
+  "pre-commit": ["validate"],
+  "eslintConfig": {
+    "extends": "eventbrite-react",
+    "rules": {
+      "import/named": "off",
+      "no-invalid-this": "off",
+      "semi": ["error", "never"]
+    },
+    "env": {
+      "jest": true
+    }
   },
   "engines": {
     "node": ">=6"
   },
-  "pre-commit": ["validate"],
   "dependencies": {
     "expo": "^20.0.0",
     "humps": "^2.0.0",
@@ -86,7 +98,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.1",
     "eslint-plugin-react": "^6.8.0",
     "file-loader": "^0.9.0",
-    "flow-bin": "^0.36.0",
+    "flow-bin": "^0.49.1",
     "gh-pages": "^0.12.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^18.1.0",
