--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "start:android": "react-native-scripts android",
     "start:ios": "react-native-scripts ios",
     "build:web": "react-scripts build",
-    "deploy:web":
-      "yarn run bundle:web && gh-pages --dist build --message 'Manual deploy'",
+    "deploy:web": "yarn run bundle:web && gh-pages --dist build --message 'Manual deploy'",
     "gen:routes": "babel-node _scripts/gen-routes-data.js",
     "gen:stations": "babel-node _scripts/gen-stations-data.js",
     "gen:station-routes": "babel-node _scripts/gen-station-routes-data.js",
@@ -31,15 +30,20 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "coveragePathIgnorePatterns": ["/node-modules/", "<rootDir>/src/store/"]
+    "coveragePathIgnorePatterns": [
+      "/node-modules/",
+      "<rootDir>/src/store/"
+    ]
   },
-  "pre-commit": ["validate"],
   "eslintConfig": {
     "extends": "eventbrite-react",
     "rules": {
       "import/named": "off",
       "no-invalid-this": "off",
-      "semi": ["error", "never"]
+      "semi": [
+        "error",
+        "never"
+      ]
     },
     "env": {
       "jest": true
@@ -66,48 +70,20 @@
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
-    "airbnb-js-shims": "^1.1.1",
-    "autoprefixer": "^6.5.4",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.20.0",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-env": "^1.0.2",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-native": "1.9.0",
-    "css-loader": "^0.26.1",
-    "enzyme": "^2.6.0",
     "eslint": "^3.12.1",
     "eslint-config-eventbrite-react": "^2.0.1",
-    "eslint-import-resolver-webpack": "^0.8.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.1",
     "eslint-plugin-react": "^6.8.0",
-    "file-loader": "^0.9.0",
     "flow-bin": "^0.49.1",
     "gh-pages": "^0.12.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jest": "^18.1.0",
     "jest-expo": "~20.0.0",
-    "json-loader": "^0.5.4",
-    "postcss-loader": "^1.2.1",
-    "pre-commit": "^1.2.2",
-    "react-hot-loader": "^1.3.1",
     "react-native-scripts": "1.3.1",
     "react-scripts": "^1.0.13",
     "react-test-renderer": "^16.0.0-rc.2",
     "redux-devtools-extension": "^1.0.0",
     "redux-logger": "^2.7.4",
-    "resolve-url-loader": "^1.6.1",
-    "sass-lint": "^1.10.2",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2",
-    "whatwg-fetch": "^2.0.3"
+    "sass-lint": "^1.10.2"
   }
 }
