--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "start:android": "react-native-scripts android",
     "start:ios": "react-native-scripts ios",
     "build:web": "react-scripts build",
-    "deploy:web": "yarn run bundle:web && gh-pages --dist build --message 'Manual deploy'",
+    "deploy:web": "yarn run build:web && gh-pages --dist build --message 'Manual deploy'",
     "gen:routes": "babel-node _scripts/gen-routes-data.js",
     "gen:stations": "babel-node _scripts/gen-stations-data.js",
     "gen:station-routes": "babel-node _scripts/gen-station-routes-data.js",
-    "gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js",
-    "eject:web": "react-scripts eject",
-    "eject:rn": "react-native-scripts eject"
+    "gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
   },
   "jest": {
     "preset": "jest-expo",
@@ -54,20 +52,23 @@
   },
   "dependencies": {
     "expo": "^20.0.0",
-    "humps": "^2.0.0",
-    "lodash": "^4.17.3",
-    "react": "^16.0.0-rc.2",
-    "react-dom": "^16.0.0-rc.2",
+    "humps": "^2.0.1",
+    "lodash": "^4.17.4",
+    "react": "^16.0.0-rc.3",
+    "react-dom": "^16.0.0-rc.3",
     "react-native": "^0.47.0",
     "react-native-router-flux": "^3.37.0",
     "react-native-web": "^0.0.121",
-    "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.0.1",
-    "redux-thunk": "^2.1.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-native": "^4.2.0",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-persist": "^4.9.1",
+    "redux-thunk": "^2.2.0",
     "url-lib": "^2.0.2",
-    "xml2js": "^0.4.17"
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -77,13 +78,13 @@
     "eslint-plugin-jsx-a11y": "^3.0.1",
     "eslint-plugin-react": "^6.8.0",
     "flow-bin": "^0.49.1",
-    "gh-pages": "^0.12.0",
+    "gh-pages": "^1.0.0",
     "jest-expo": "~20.0.0",
     "react-native-scripts": "1.3.1",
     "react-scripts": "^1.0.13",
-    "react-test-renderer": "^16.0.0-rc.2",
-    "redux-devtools-extension": "^1.0.0",
-    "redux-logger": "^2.7.4",
+    "react-test-renderer": "^16.0.0-rc.3",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
     "sass-lint": "^1.10.2"
   }
 }
