--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "expo": "^20.0.0",
     "humps": "^2.0.1",
     "lodash": "^4.17.4",
-    "react": "^16.0.0-rc.3",
-    "react-dom": "^16.0.0-rc.3",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-native": "^0.47.0",
     "react-native-router-flux": "^3.37.0",
-    "react-native-web": "^0.0.121",
+    "react-native-web": "^0.1.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -82,7 +83,7 @@
     "jest-expo": "~20.0.0",
     "react-native-scripts": "1.3.1",
     "react-scripts": "^1.0.13",
-    "react-test-renderer": "^16.0.0-rc.3",
+    "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "sass-lint": "^1.10.2"
