--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "format": "prettier --write 'src/**/*.{js,jsx,json,css}'",
     "precommit": "lint-staged",
     "test": "yarn run test:web && yarn run test:rn",
-    "test:web": "react-scripts test --env=jsdom",
+    "test:web": "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "test:rn": "jest --verbose --config=jest.rn.json",
+    "test:rn:watch": "yarn run test:rn --watch",
     "validate": "yarn run check && yarn test",
     "start": "yarn run start:web",
     "start:web": "react-scripts start",
@@ -69,6 +70,7 @@
     "jest-expo": "~20.0.0",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.3",
+    "raf": "^3.4.0",
     "react-native-scripts": "1.3.1",
     "react-scripts": "^1.0.13",
     "react-test-renderer": "^16.0.0",
