Change script name to check:static
Don't want it to be confused with `yarn check` the command

--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "flow": "flow",
     "lint": "yarn lint:css",
     "lint:css": "sass-lint 'src' --verbose --no-exit",
-    "check": "yarn lint",
+    "check:static": "yarn lint",
     "format": "prettier --write 'src/**/*.{js,jsx,json,css}'",
     "precommit": "lint-staged",
     "test": "yarn test:web && yarn test:rn",
     "test:web": "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "test:rn": "jest --verbose --config=jest.rn.json",
     "test:rn:watch": "yarn test:rn --watch",
-    "validate": "yarn check && yarn test",
+    "validate": "yarn check:static && yarn test",
     "start": "yarn start:web",
     "start:web": "react-scripts start",
     "start:rn": "react-native-scripts start",
