Fix broken build by including homepage config
When site is published, it's at http://www.benmvp.com/bart-salmon/ so need to specify `/bart-salmon` in `package.json` as configuration.

Also specifying `-webkit-appearance: menulist-button` in order to fix iOS `<select>` height issue to fix #6

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gen:station-routes": "babel-node _scripts/gen-station-routes-data.js",
     "gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
   },
+  "homepage": "/bart-salmon",
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": ["yarn format", "git add"]
   },
