--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format": "prettier --write 'src/**/*.{js,jsx,json,css}'",
     "precommit": "lint-staged",
     "test": "yarn test:web && yarn test:rn",
-    "test:web": "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
+    "test:web":
+      "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "test:rn": "jest --config=jest.rn.json --coverage",
     "test:rn:watch": "yarn test:rn --watch",
     "validate": "yarn check:static && yarn test",
@@ -24,13 +25,13 @@
     "start:android": "react-native-scripts android",
     "start:ios": "react-native-scripts ios",
     "build:web": "react-scripts build",
-    "deploy:web": "yarn build:web && gh-pages --dist build --message 'Manual deploy'",
+    "deploy:web":
+      "yarn build:web && gh-pages --dist build --message 'Manual deploy'",
     "gen:routes": "babel-node _scripts/gen-routes-data.js",
     "gen:stations": "babel-node _scripts/gen-stations-data.js",
     "gen:station-routes": "babel-node _scripts/gen-station-routes-data.js",
     "gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
   },
-  "homepage": "/bart-salmon",
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": ["yarn format", "git add"]
   },
