--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "scripts": {
     "flow": "flow",
@@ -14,8 +14,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx,json,css}'",
     "precommit": "lint-staged",
     "test": "yarn test:web",
-    "test:web":
-      "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
+    "test:web": "react-scripts test --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "test:rn": "jest --config=jest.rn.json --coverage",
     "test:rn:watch": "yarn test:rn --watch",
     "validate": "yarn check:static && yarn test",
@@ -25,15 +24,17 @@
     "start:android": "react-native-scripts android",
     "start:ios": "react-native-scripts ios",
     "build:web": "react-scripts build",
-    "deploy:web":
-      "yarn build:web && gh-pages --dist build --message 'Manual deploy'",
+    "deploy:web": "yarn build:web && gh-pages --dist build --message 'Manual deploy'",
     "gen:routes": "babel-node _scripts/gen-routes-data.js",
     "gen:stations": "babel-node _scripts/gen-stations-data.js",
     "gen:station-routes": "babel-node _scripts/gen-station-routes-data.js",
     "gen:mock:etd": "babel-node _scripts/gen-mock-etd-data.js"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": ["yarn format", "git add"]
+    "src/**/*.{js,jsx,json,css}": [
+      "yarn format",
+      "git add"
+    ]
   },
   "prettier": {
     "bracketSpacing": false,
@@ -44,16 +45,23 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "dependencies": {
-    "expo": "^20.0.0",
+    "expo": "^30.0.1",
     "humps": "^2.0.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-art": "^16.5.2",
     "react-dom": "^16.0.0",
-    "react-native": "^0.47.0",
-    "react-native-router-flux": "^3.37.0",
-    "react-native-web": "^0.1.1",
+    "react-native": "^0.57.2",
+    "react-native-router-flux": "^4.0.5",
+    "react-native-web": "^0.9.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -66,15 +74,14 @@
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "flow-bin": "^0.49.1",
+    "flow-bin": "^0.82.0",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
-    "jest-expo": "~20.0.0",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.3",
     "raf": "^3.4.0",
-    "react-native-scripts": "1.3.1",
-    "react-scripts": "^1.0.13",
+    "react-native-scripts": "2.0.1",
+    "react-scripts": "^2.0.3",
     "react-test-renderer": "^16.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
