--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "typescript": "3.5.3",
-    "url-lib": "^3.0.2",
+    "url-lib": "^3.0.3",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
@@ -49,6 +49,8 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-router": "^5.0.3",
+    "@types/redux-logger": "^3.0.7",
+    "@types/xml2js": "^0.4.4",
     "raf": "^3.4.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6"
