--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.1",
     "redux": "^4.0.3",
     "redux-persist": "^5.10.0",
@@ -48,7 +45,7 @@
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "@types/react-router": "^5.0.3",
+    "@types/react-redux": "^7.1.1",
     "@types/redux-logger": "^3.0.7",
     "@types/webpack-env": "^1.14.0",
     "@types/xml2js": "^0.4.4",
